# pptx2aituberkitscript

./: README.md  pyproject.toml
pptx2aituberkitscript/: __init__.py  __main__.py  columns.py  global_var.py  outputter.py  parser.py  tools.py
